# support-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.claude/tasks/: angular-widget-build-plan.md  initial-build-plan.md
apps/actions/: helpers.py  tokens.py  urls.py  views.py
apps/admin_config/: apps.py  models.py  serializers.py  urls.py  views.py
apps/analytics/: serializers.py  services.py  urls.py  views.py
apps/audit/: admin.py  factories.py  models.py
apps/conversations/: admin.py  factories.py  models.py  services.py  tasks.py
apps/customer_api/: apps.py  serializers.py  stream_views.py  urls.py  views.py  widget_views.py
apps/integrations_roam/: adapter.py  apps.py  blocks.py  client.py  exceptions.py  formatters.py  mock_client.py  notifications.py  tasks.py  theme.py  types.py  urls.py  views.py  webhook_service.py
apps/messaging/: admin.py  factories.py  models.py
apps/ops_api/: apps.py  serializers.py  urls.py  views.py
apps/queues/: admin.py  apps.py  factories.py  models.py
apps/routing/: admin.py  apps.py  factories.py  models.py  services.py
config/: asgi.py  celery.py  urls.py  wsgi.py
tests/: conftest.py  test_analytics.py  test_audit_events.py  test_blocks.py  test_branding_api.py  test_conversation_service.py  test_formatters.py  test_models.py  test_roam_client.py  test_smoke.py  test_sse_service.py  test_theme.py  test_transcript.py  test_webhook_ingestion.py
widget/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+39 files in other folders)
