[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyflare-support-bridge"
version = "0.1.0"
description = "API-first support orchestration service for Cyflare"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15,<4.0",
    "drf-spectacular>=0.28,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "redis>=5.0,<6.0",
    "celery[redis]>=5.4,<6.0",
    "uvicorn[standard]>=0.32,<1.0",
    "httpx>=0.28,<1.0",
    "tenacity>=9.0,<10.0",
    "firebase-admin>=6.6,<7.0",
    "python-json-logger>=3.2,<4.0",
    "python-decouple>=3.8,<4.0",
    "django-cors-headers>=4.6,<5.0",
]

[project.optional-dependencies]
dev = [
    "factory-boy>=3.3,<4.0",
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-asyncio>=0.24,<1.0",
    "respx>=0.22,<1.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py"]
pythonpath = ["."]
addopts = "--tb=short -q"

[tool.setuptools.packages.find]
include = ["config*", "apps*", "common*"]
